--- a/sphinx.conf
+++ b/sphinx.conf
@@ -2,37 +2,37 @@
 # Minimal Sphinx configuration sample (clean, simple, functional)
 #
 
-source src1
-{
-	type			= mysql
+#source src1
+#{
+#	type			= mysql
+#
+#	sql_host		= 127.0.0.1
+#	sql_user		= root
+#	sql_pass		=
+#	sql_db			= ssbc
+#	sql_port		= 3306	# optional, default is 3306
+#
+#	sql_query_pre       = SET NAMES utf8
+#	sql_query		= \
+#		SELECT id, name, CRC32(category) AS category, length, UNIX_TIMESTAMP(create_time) AS create_time, UNIX_TIMESTAMP(last_seen) AS last_seen\
+#		FROM search_hash
+#
+#	sql_attr_bigint		= length
+#	sql_attr_timestamp	= create_time
+#	sql_attr_timestamp	= last_seen
+#	sql_attr_uint   = category
 
-	sql_host		= 127.0.0.1
-	sql_user		= root
-	sql_pass		=
-	sql_db			= ssbc
-	sql_port		= 3306	# optional, default is 3306
-
-	sql_query_pre       = SET NAMES utf8
-	sql_query		= \
-		SELECT id, name, CRC32(category) AS category, length, UNIX_TIMESTAMP(create_time) AS create_time, UNIX_TIMESTAMP(last_seen) AS last_seen\
-		FROM search_hash
-
-	sql_attr_bigint		= length
-	sql_attr_timestamp	= create_time
-	sql_attr_timestamp	= last_seen
-	sql_attr_uint   = category
-
-}
+#}
 
 
-index main
-{
-	source			= src1
-	path			= /data/bt/index/db/main
-
-    ngram_len = 1
-    ngram_chars = U+3000..U+2FA1F
-}
+#index main
+#{
+#	source			= src1
+#	path			= /data/bt/index/db/main
+#
+#    ngram_len = 1
+#    ngram_chars = U+3000..U+2FA1F
+#}
 
 
 index rt_main
@@ -48,8 +48,8 @@ index rt_main
 	rt_attr_timestamp	= last_seen
 	rt_attr_uint    = category
 
-    ngram_len = 1
-    ngram_chars = U+3000..U+2FA1F
+  ngram_len = 1
+  ngram_chars = U+3000..U+2FA1F
 }
 
 
@@ -61,8 +61,8 @@ indexer
 
 searchd
 {
-	listen			= 9312
-	listen			= 9306:mysql41
+#	listen			= 9312
+	listen			= 127.0.0.1:9306:mysql41
 	log			= /data/bt/index/searchd.log
 	query_log		= /data/bt/index/query.log
 	read_timeout		= 5
